--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+pypdf==5.0.0
+python-docx==1.1.2
+requests==2.32.3
+python-dateutil==2.9.0.post0
 streamlit
 openai
-pinecone-client
-langchain
-langchain-openai
-langchain-pinecone
-langchain-community
-pypdf
+PyPDF2
+chromadb
 tiktoken
+python-docx
+sentence-transformers
